FileManager/eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: filemanager
spec:
  selector:
    app: filemanager
  type: ClusterIP
  ports:
    -  protocol: TCP
       port: 80
       targetPort: 8000
