FileManager/eks/ingress-ia.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microia
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 25m
spec:
  tls:
  - hosts:
    - iamauta.com
    secretName: tls-secret
  rules:
  - host: apicalidadcloud.iamauta.com
    http:
      paths:
      - path: /tensorboard
        pathType: Prefix
        backend:
          service:
            name: tensorboard
            port:
              number: 80
      - path: /help/tensorboard
        pathType: Prefix
        backend:
          service:
            name: tensorboard
            port:
              number: 80
      - path: /ai-reporter
        pathType: Prefix
        backend:
          service:
            name: ai-reporter
            port:
              number: 80
      - path: /help/ai-reporter
        pathType: Prefix
        backend:
          service:
            name: ai-reporter
            port:
              number: 80
      - path: /trainer
        pathType: Prefix
        backend:
          service:
            name: trainer
            port:
              number: 80
      - path: /help/trainer
        pathType: Prefix
        backend:
          service:
            name: trainer
            port:
              number: 80
      - path: /predictor
        pathType: Prefix
        backend:
          service:
            name: predictor
            port:
              number: 80
      - path: /help/predictor
        pathType: Prefix
        backend:
          service:
            name: predictor
            port:
              number: 80
      - path: /ai-adm
        pathType: Prefix
        backend:
          service:
            name: ai-admin
            port:
              number: 80
      - path: /help/ai-adm
        pathType: Prefix
        backend:
          service:
            name: ai-admin
            port:
              number: 80
      - path: /help/mongoadmin
        pathType: Prefix
        backend:
          service:
            name: ai-mongoadmin
            port:
              number: 80
      - path: /ai-forecaster
        pathType: Prefix
        backend:
          service:
            name: forecaster
            port:
              number: 80
      - path: /test-filemanager
        pathType: Prefix
        backend:
          service:
            name: filemanager
            port:
              number: 80
